--- a/css/master.css
+++ b/css/master.css
@@ -165,7 +165,7 @@
   font-size: 10px;
   margin-top: 13px;
   margin-left: 8px;
-  background-color: #0066dd;
+  background-color: #C13281;
   padding: 2px;
   border-radius: 4px;
 }
@@ -421,7 +421,7 @@
 
 #tokenbox {
   display: block;
-  width: calc(100% - 110px);
+  width: calc(100% - 130px);
   border: none;
   background-color: #484B51;
   color: white;
@@ -439,7 +439,7 @@
 #savebtn {
   margin-top: 0px;
   position: absolute;
-  margin-left: calc(100% - 93px);
+  margin-left: calc(100% - 115px);
   z-index: 100;
   padding: 10px;
   color: #777777;
@@ -448,7 +448,7 @@
   border-radius: 5px;
   cursor: pointer;
   outline: none;
-  margin-top: -35px;
+  margin-top: -38px;
 }
 
 #savebtn:hover {
