--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
-body{font-family: Tahoma, Geneva, sans-serif; background-color: black; color: white;}
+body{font-family: Tahoma, Geneva, sans-serif; background-color: black; color: rgb(161, 90, 90);}
 .logo{color: rgb(79,93,255); /* Old browsers */
 color: -moz-linear-gradient(-45deg, rgba(79,93,255,1) 0%, rgba(211,238,255,1) 100%); /* FF3.6-15 */
 color: -webkit-linear-gradient(-45deg, rgba(79,93,255,1) 0%,rgba(211,238,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
 color: linear-gradient(135deg, rgba(79,93,255,1) 0%,rgba(211,238,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-font-size: 4.5em;
+font-size: 4em;
 font-weight: bold;}
 .center {
     position: absolute;
@@ -14,5 +14,5 @@ font-weight: bold;}
     left: 50%;
 }
 a{
-    color: aqua;
+    color: rgb(0, 255, 55);
 }
