--- a/css/master.css
+++ b/css/master.css
@@ -440,7 +440,7 @@
 #savebtn {
   margin-top: 0px;
   position: absolute;
-  margin-left: calc(100% - 100px);
+  margin-left: calc(100% - 110px);
   z-index: 100;
   padding: 10px;
   color: #777777;
@@ -449,10 +449,29 @@
   border-radius: 5px;
   cursor: pointer;
   outline: none;
-  margin-top: -38px;
+  margin-top: -35px;
 }
 
 #savebtn:hover {
+  background-color: #404040;
+}
+
+#sendbtn {
+  margin-top: 0px;
+  position: absolute;
+  margin-left: calc(100% - 110px);
+  z-index: 100;
+  padding: 10px;
+  color: #777777;
+  background-color: #484B51;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+  margin-top: -35px;
+}
+
+#sendbtn:hover {
   background-color: #404040;
 }
 
