add "set username" button and seperator for both buttons to avoid confusion

--- a/css/master.css
+++ b/css/master.css
@@ -505,3 +505,11 @@
 #inviteBtn:hover {
   background-color: #393939;
 }
+
+#usernameBtn {
+  cursor: pointer;
+}
+
+#usernameBtn:hover {
+  background-color: #393939;
+}
