added nice-looking blur effect when switching between servers/channels

--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,13 @@
+@keyframes blur {
+    from {-webkit-filter: blur(1px)}
+    to {-webkit-filter: blur(0px)}
+}
+
+* {
+    animation-name: blur;
+    animation-duration: 0.5s;
+}
+
 #body {
   position: fixed;
   overflow-y: hidden;
